Updated comments, refactored for clarity, and added SObjects so I can include more sample code

--- a/src/package.xml
+++ b/src/package.xml
@@ -4,5 +4,10 @@
         <members>*</members>
         <name>ApexClass</name>
     </types>
+    <types>
+        <members>*</members>
+        <members>Case</members>
+        <name>CustomObject</name>
+    </types>
     <version>38.0</version>
 </Package>
