--- a/src/package.xml
+++ b/src/package.xml
@@ -1,12 +1,14 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
         <members>*</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
         <members>Case</members>
+        <members>Product2</members>
+        <members>Vehicle__c</members>
+        <members>Work_Part__c</members>
         <name>CustomObject</name>
     </types>
     <version>38.0</version>
